# konanai

./: .codeclimate.yml  .gitignore  .gitignore.txt  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  README.rst  list_modules.py  print_imports.py  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: docs_build.yml  pylint.yml  pytest.yml
docs/: conf.py  generate_docs.sh  index.rst  postprocess.py  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/konanai/: domains.rst  empirics.rst  externals.rst  konanai.rst  models.rst
src/konanai/: __init__.py
src/konanai/domains/: __init__.py  linguistic.py  representation.py  time.py  time_frequency.py  time_linguistic.py
src/konanai/empirics/: __init__.py  ablation.py
src/konanai/models/: __init__.py  acoustic_phonetic.py
src/tap/classes/: timeframe.py
tests/tap/classes/: test_timeframe.py
tmp_docs/source/: conf.py
